@@ -7,15 +7,15 @@ apply plugin: 'com.diffplug.spotless'
 
 android {
     compileSdk 31
-	namespace "com.tyron.completion.java"
-	
-	spotless {
-		java {
-			target "**/*.java"
-			googleJavaFormat()
-			}
-		}
-		
+    namespace "com.tyron.completion.java"
+
+    spotless {
+        java {
+            target "**/*.java"
+            googleJavaFormat()
+        }
+    }
+
     defaultConfig {
         minSdk 26
         targetSdk 31
@@ -30,45 +30,78 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-    
+
     buildFeatures {
-        buildConfig true	    
+        buildConfig true
     }
 }
 
 dependencies {
-
-    implementation project(path: ':actions-api')
-    implementation project(path: ':editor-api')
-    implementation project(path: ':treeview')
-    implementation project(path: ':kotlin-completion')
+    implementation project(':actions-api')
+    implementation project(':editor-api')
+    implementation project(':treeview')
+    implementation project(':kotlin-completion')
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation "com.google.truth:truth:1.4.4"
-    testImplementation "org.robolectric:robolectric:4.13"
+    testImplementation 'com.google.truth:truth:1.4.4'
+    testImplementation 'org.robolectric:robolectric:4.13'
     testImplementation 'androidx.test:core:1.4.0'
-    testImplementation project(path: ':javac')
+    testImplementation project(':javac')
+
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
-    // code generation
     api 'com.github.javaparser:javaparser-core:3.26.1'
-    
+
     implementation 'androidx.annotation:annotation:1.8.2'
 
-    implementation project(path: ':common')
-    implementation project(path: ':completion-api')
-    implementation project(path: ':language-api')
+    implementation project(':common')
+    implementation project(':completion-api')
+    implementation project(':language-api')
 
-    implementation project(path: ':javac')
-    implementation project(path: ':logging')
+    implementation project(':javac')
+    implementation project(':logging')
 
-    api project(path: ':build-logic')
+    api project(':build-logic')
 
     compileOnly 'androidx.recyclerview:recyclerview:1.1.0'
-    compileOnly project(path: ':android-stubs')
+    compileOnly project(':android-stubs')
+    // https://mvnrepository.com/artifact/org.checkerframework/checker-qual
+    implementation("org.checkerframework:checker-qual:3.50.0")
 }
+
+/*compileJava {
+    options.compilerArgs += ["--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                             "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                             "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                             "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                             "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+                             "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                             "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                             "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                             "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                             "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                             "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"]
+}*/
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"
+    ]
+}
+
+ 
